--- a/styles/shared/post.scss
+++ b/styles/shared/post.scss
@@ -231,3 +231,44 @@
 .single-post.direct-post {
   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='36' height='36' viewBox='0 0 48 48'><path fill='%23eeeeee' d='M40 8H8c-2.21 0-3.98 1.79-3.98 4L4 36c0 2.21 1.79 4 4 4h32c2.21 0 4-1.79 4-4V12c0-2.21-1.79-4-4-4zm0 8L24 26 8 16v-4l16 10 16-10v4z'/></svg>") no-repeat top right
 }
+
+.link-preview {
+  max-width: 400px;
+  max-height: 400px;
+  overflow: hidden;
+  position: relative;
+
+  &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 40px;
+      pointer-events:none;
+      background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.8) 75%, rgba(255, 255, 255, 1) 100%);
+      background: -o-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.8) 75%, rgba(255, 255, 255, 1) 100%);
+      background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.8) 75%, rgba(255, 255, 255, 1) 100%);
+    }
+
+  &.show-all::after,
+  &.expanded::after {
+    content: none;
+  }
+
+  &.show-all,
+  &.expanded {
+    max-height: none;
+  }
+}
+
+.link-preview-container {
+  margin-bottom: 8px;
+}
+
+.link-preview-expand {
+  margin-top: 8px;
+  & > .fa {
+    opacity: 0.5;
+  }
+}
